--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "tfx2json",
   "version": "1.0.0",
   "description": "Convert Terraform / OpenTofu templates (.tf) to JSON for saner ops",
-  "main": "index.js",
+  "main": "dist/tfx2json.js",
+  "types": "./types.d.ts",
   "scripts": {
+    "bundle": "webpack",
     "build": "tsx build.ts",
-    "start": "tsx index.ts"
+    "start": "tsx tfx2json.ts"
   },
   "repository": {
     "type": "git",
@@ -19,14 +21,28 @@
   },
   "homepage": "https://github.com/3p3r/tfx2json#readme",
   "devDependencies": {
+    "@types/atob-lite": "^2.0.2",
+    "@types/lodash": "^4.17.15",
     "@types/node": "^22.13.1",
     "@types/traverse": "^0.6.37",
+    "@types/webpack": "^5.28.5",
+    "atob-lite": "^2.0.0",
+    "copy-webpack-plugin": "^12.0.2",
+    "lodash": "^4.17.21",
     "memfs": "^4.17.0",
+    "terser-webpack-plugin": "^5.3.11",
     "traverse": "^0.6.11",
     "tree-sitter": "0.20.6",
+    "ts-loader": "^9.5.2",
+    "ts-node": "^10.9.2",
     "tsx": "^4.19.2",
+    "typescript": "^5.7.3",
+    "url-loader": "^4.1.1",
     "wasi-js": "^1.7.3",
-    "web-tree-sitter": "0.20.8",
+    "web-tree-sitter": "^0.20.8",
+    "webpack": "^5.97.1",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.0",
     "zx": "^8.3.2"
   }
 }
